(bug) fixed the spacing of categories title

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -29,15 +29,6 @@ body{
   margin: 20px;
 }
 
-.categories h1{
-  letter-spacing: 10px;
-}
-
-.categories h1 span{
-  margin: 0 0;
-  padding: 0 0;
-}
-
 .category-table .col{
   width: 30%;
   text-align: center;
